--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="timeLeft">Time Left: %1$d</string>
     <string name="tapMe">Tap Me!</string>
     <string name="gameOverMessage">Time is up! Your score was %1$d</string>
+    <string name="aboutMenu">About</string>
+    <string name="aboutMessage">Created by Kotlin Developer</string>
+    <string name="aboutTitle">Time Fighter</string>
 </resources>
